--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,15 @@
+1.5.0
+- quest item looting support - grimmier
+- tribute item support - grimmier
+- various cleanup, reporting changes, destroy item changes - grimmier
+- loot history ui, see https://github.com/grimmier378/looted - grimmier
+
+1.4.0
+- ???
+
+1.3.0
+- ???
+
 1.2.0
 - Split settings into a separate config file - grimmier
 - Track wasLooting state when bags get filled and looting stops - grimmier
